Project

General

Profile

Actions

Bug #42169

closed

missing lock release in DaemonServer::handle_report()

Added by Venky Shankar over 4 years ago. Updated about 4 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
ceph-mgr
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
nautilus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

this code part:

      lock.lock();

      // kill session                                                                                                                 
      auto priv = m->get_connection()->get_priv();
      auto session = static_cast<MgrSession*>(priv.get());
      if (!session) {
        return false;
      }
      m->get_connection()->mark_down();

      dout(10) << "unregistering osd." << session->osd_id
               << "  session " << session << " con " << m->get_connection() << dendl;

introduced by commit 5c25a018643b10aa78db8270cae1476f71d8f4f4


Related issues 1 (0 open1 closed)

Copied to mgr - Backport #42325: nautilus: missing lock release in DaemonServer::handle_report()ResolvedVenky ShankarActions
Actions #1

Updated by Venky Shankar over 4 years ago

  • Status changed from In Progress to Fix Under Review
  • Pull request ID set to 30706
Actions #2

Updated by Kefu Chai over 4 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Nathan Cutler over 4 years ago

  • Copied to Backport #42325: nautilus: missing lock release in DaemonServer::handle_report() added
Actions #4

Updated by Nathan Cutler about 4 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF