mgr: missing lock release in DaemonServer::handle_report()

Fixes: http://tracker.ceph.com/issues/42169
Introduced-by: 6e30134da9
Signed-off-by: Venky Shankar <vshankar@redhat.com>